Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-131607

Crash on NativeSkiaOutputDeviceDirect3D11::texture() with nullptr access

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • None
    • 6.7.3
    • WebEngine
    • None
    • Windows
    • b8a9c4b81 (dev), 8480e294f (6.8)

      Found it in our automated tracking system.

      Unhandled exception at 0x00007FFEFE0A7FDF (Qt6WebEngineCore.dll) in minidump (50).dmp: 0xC0000005: Access violation reading location 0x0000000000000000.
      

      Call stack:

      >	Qt6WebEngineCore.dll!QtWebEngineCore::NativeSkiaOutputDeviceDirect3D11::texture(QQuickWindow * win, unsigned int textureOptions) Line 65	C++
       	Qt6WebEngineCore.dll!QtWebEngineCore::RenderWidgetHostViewQtDelegateItem::updatePaintNode(QSGNode * oldNode, QQuickItem::UpdatePaintNodeData * __formal) Line 386	C++
       	Qt6Quick.dll!QQuickWindowPrivate::updateDirtyNode(QQuickItem * item) Line 2247	C++
       	Qt6Quick.dll!QQuickWindowPrivate::updateDirtyNodes() Line 1987	C++
       	Qt6Quick.dll!QQuickWindowPrivate::syncSceneGraph() Line 560	C++
       	Qt6Quick.dll!QSGSoftwareRenderLoop::renderWindow(QQuickWindow * window, bool isNewExpose) Line 128	C++
       	Qt6Quick.dll!QQuickWindow::event(QEvent * event) Line 1591	C++
       	[Inline Frame] Qt6Core.dll!QCoreApplicationPrivate::notify_helper(QObject *) Line 1326	C++
       	[Inline Frame] Qt6Core.dll!doNotify(QObject *) Line 1253	C++
       	Qt6Core.dll!QCoreApplication::notify(QObject * receiver, QEvent * event) Line 1237	C++
       	Qt6Core.dll!QCoreApplication::notifyInternal2(QObject * receiver, QEvent * event) Line 1152	C++
       	Qt6Gui.dll!QPlatformWindow::deliverUpdateRequest() Line 793	C++
       	Qt6Gui.dll!QPlatformWindow::windowEvent(QEvent * event) Line 455	C++
       	[Inline Frame] Qt6Gui.dll!QGuiApplicationPrivate::sendQWindowEventToQPlatformWindow(QWindow *) Line 2062	C++
       	Qt6Gui.dll!QGuiApplication::notify(QObject * object, QEvent * event) Line 1994	C++
       	Qt6Core.dll!QCoreApplication::notifyInternal2(QObject * receiver, QEvent * event) Line 1152	C++
       	Qt6Core.dll!QEventDispatcherWin32Private::sendTimerEvent(int timerId) Line 403	C++
       	Qt6Core.dll!QEventDispatcherWin32::event(QEvent * e) Line 885	C++
       	[Inline Frame] Qt6Core.dll!QCoreApplicationPrivate::notify_helper(QObject *) Line 1326	C++
       	[Inline Frame] Qt6Core.dll!doNotify(QObject *) Line 1253	C++
       	Qt6Core.dll!QCoreApplication::notify(QObject * receiver, QEvent * event) Line 1237	C++
       	Qt6Core.dll!QCoreApplication::notifyInternal2(QObject * receiver, QEvent * event) Line 1152	C++
       	[Inline Frame] Qt6Core.dll!QCoreApplication::sendEvent(QObject *) Line 1593	C++
       	Qt6Core.dll!QCoreApplicationPrivate::sendPostedEvents(QObject * receiver, int event_type, QThreadData * data) Line 1951	C++
       	Qt6Gui.dll!QWindowsGuiEventDispatcher::sendPostedEvents() Line 44	C++
       	Qt6Core.dll!QEventDispatcherWin32::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 470	C++
       	Qt6Gui.dll!QWindowsGuiEventDispatcher::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 37	C++
       	[Inline Frame] Qt6Core.dll!QEventLoop::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag>) Line 100	C++
       	Qt6Core.dll!QEventLoop::exec(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 181	C++
       	Qt6Core.dll!QCoreApplication::exec() Line 1496	C++
      

       

      Pay attention that device is nullptr, what means QSGRendererInterface::getResource(win, QSGRendererInterface::DeviceResource) may return null pointer under some circumstances.

        For Gerrit Dashboard: QTBUG-131607
        # Subject Branch Project Status CR V

            qt_webengine_team Qt WebEngine Team
            studiosus Vladimir Belyavsky
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes