NativeSkiaOutputDeviceDirect3D11: don't crash on null device

It's not yet clear how this may happen, but we see that under
some circumstances QSGRendererInterface may return null device
resource for a window. So, let's handle this situation to avoid
crashing on nullptr dereferencing.

Task-number: QTBUG-131607
Change-Id: I3852c3c0864168515887140e36f551b4cdf059a4
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>
(cherry picked from commit b8a9c4b813a2bb251ffb1b24ea4eff116ae37ece)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>