src/core/compositor/native_skia_output_device_direct3d11.cpp
@@ -64,7 +64,11 @@ QSGTexture *NativeSkiaOutputDeviceDirect3D11::texture(QQuickWindow *win, uint32_
     QSGRendererInterface *ri = win->rendererInterface();
     ID3D11Device *device = static_cast<ID3D11Device *>(
             ri->getResource(win, QSGRendererInterface::DeviceResource));
-    Q_ASSERT(device);
+    if (!device) {
+        qWarning("D3D: No D3D device.");
+        ::CloseHandle(sharedHandle);
+        return nullptr;
+    }
 
     Microsoft::WRL::ComPtr<ID3D11Device1> device1;
     hr = device->QueryInterface(IID_PPV_ARGS(&device1));
